--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,6 @@
 /* Definindo as  cores  mais utilizadas em variáveis*/
 :root{
-    --vermelhos:#0918e5e8;
+    --vermelho:#E50914;
     --preta:#141414;
     
 }
@@ -14,10 +14,30 @@
 
 body{
     background:  var(--preta);
+    font-family: 'Times New Roman', Times, serif';
+}
+
+header .container{
+   display: flex;
+   flex-direction: row;
+   align-items: center;  /*vertical*/
+   justify-content: space-between; /*horizontal*/
 
 }
 
+header .Logo{
+    margin-left: 5px;
+    color: var(--vermelho);
+    font-family: 'Arial Black',Times;
+    font-size: 40px;
+}
 
-header .container{
-   
+header nav a{
+    text-decoration: none;
+    color: #AAA;
+    margin-right: 10px;
+}
+
+header nav a:hover{
+    color: #fff;
 }
