--- a/style/main.css
+++ b/style/main.css
@@ -13,8 +13,10 @@
 }
 
 body{
+    color: white;
     background:  var(--preta);
-    font-family: 'Times New Roman', Times, serif';
+    font-family: 'Times New Roman', Times, serif;
+    
 }
 
 header .container{
