--- a/style/main.css
+++ b/style/main.css
@@ -39,6 +39,6 @@ header nav a{
     margin-right: 10px;
 }
 
-header nav a:hover{
+header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
     color: #fff;
 }
