--- a/style/main.css
+++ b/style/main.css
@@ -48,7 +48,7 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
 
 .filme-principal{
     font-size: 16px;
-    background: url('../img/os_100_02.jpg');
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('../img/os_100_02.jpg');
 
     height: 400px;
     background-size: cover;
