--- a/style/main.css
+++ b/style/main.css
@@ -52,4 +52,8 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
 
     height: 400px;
     background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
