--- a/style/main.css
+++ b/style/main.css
@@ -58,3 +58,7 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
     justify-content: center;
     align-items: flex-start;
 }
+
+.filme-principal .descricao {
+    margin-bottom: 90px;
+}
