--- a/style/main.css
+++ b/style/main.css
@@ -65,4 +65,13 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
 
 .titulo{
     font-size: 45px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.botao{
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+    padding: 15px 30px;
+    margin-right: 15px;
 }
