--- a/style/main.css
+++ b/style/main.css
@@ -60,12 +60,14 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
 }
 
 .filme-principal .descricao {
-    margin-bottom: 90px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
-.titulo{
+   .filme-principal .titulo{
+    margin-top: 15%;
     font-size: 45px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
 .botao{
@@ -74,4 +76,12 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
     color: white;
     padding: 15px 30px;
     margin-right: 15px;
+
+    cursor: pointer;
 }
+
+.botao:hover{
+    background-color: white;
+    color: black;
+}
+
