--- a/style/main.css
+++ b/style/main.css
@@ -78,6 +78,7 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
     margin-right: 15px;
 
     cursor: pointer;
+    transition: .3s ease all;
 }
 
 .botao:hover{
