--- a/style/main.css
+++ b/style/main.css
@@ -100,3 +100,10 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
     width: 70%;
 
 }
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+
+}
