--- a/style/main.css
+++ b/style/main.css
@@ -15,7 +15,7 @@
 /* Elementos base */
 body{
     background:  var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color: white;
 }
 
@@ -105,5 +105,9 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
     height: 100%;
     width: 100%;
     display: block;
+}
 
+
+.carrousel-filmes{
+    margin-top: 5px;
 }
