--- a/style/main.css
+++ b/style/main.css
@@ -111,3 +111,18 @@ header nav a:hover{ /* Ao passar  o ponteiro  do mouse altera a cor */
 .carrousel-filmes{
     margin-top: 5px;
 }
+
+.nota{
+    padding: 15px 30px;
+    margin-right: 15px;
+}
+
+.nota:hover{
+    color: black;
+    text-decoration: none;
+    color: #AAA;
+    margin-right: 10px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
